--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -24,14 +24,7 @@
 {% endblock extra_js %}
 
 {% block content %}
-<div id="tagline_wrap">
-    {% for t in taglines %}
-        <div class="tagline">
-            <img class="tagline_gravatar" width=48 height=48 src="{% gravatar_for_email t.subscriber.email 48 %}" alt="gravatar">                
-            <div class="tagline_text">{{ t.tagline }}</div>
-        </div>
-    {% endfor %}
-</div>
+
 
 <div class="container_12 clearfix">
 	<section class="grid_6 home_split_info" id="elevator_statement">
@@ -46,13 +39,26 @@
 		figure out a solution that gets your name noticed by our attendees.</p>		
 	</section>
 
-
+<section id="tagline_section" class="container_12 clearfix">
+	<h1>Crowdsourced conference taglines</h1>
 	
+	<div id="tagline_wrap">
+	    {% for t in taglines %}
+	        <div class="tagline">
+	            <img class="tagline_gravatar" width=48 height=48 src="{% gravatar_for_email t.subscriber.email 48 %}" alt="gravatar">                
+	            <div class="tagline_text">{{ t.tagline }}</div>
+	        </div>
+	    {% endfor %}
+	</div>
+</section>
+
+
+<div class="container_12 clearfix">
 	<section class="grid_12" id="subscribe">
 		<h1>Mailing List</h1>
 		<div {% if subscribed %}class="already_subscribed"{% endif %}>			
 	        {% if subscribed %}
-	            <h2>You're already subcribed!</h2>
+	            <h2>You're subcribed!</h2>
 	            <h3>We'll drop you a line whenever we have important news to share. Would you like to <a href="{% url clear %}">register another email</a>?</h3>
 	        {% else %}
 	        <h2>Our conference-news spam is made from 100% fresh pony.</h2>
