Editing sponsors copy

--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -33,9 +33,9 @@
 		us for a week of great talks on topics in Django and web development, hacking, and socializing in Berlin!</p>		
 	</section>
 	<section class="grid_6 home_split_info" id="Sponsors">
-		<h1>Sponsors</h1>
+		<h1>Achtung Sponsors!</h1>
 		<p>DjangoCon draws several hundred smart Django hackers from across the globe&mdash;support the conference and gain a
-		place in their hearts and minds. We're open to both financial and "in-kind" sponsorships; contact us today and we'll
+		place in their hearts and minds. We're open to both financial and "in-kind" sponsorships; <a href="mailto:sponsors@djangocon.eu">contact us today</a> and we'll
 		figure out a solution that gets your name noticed by our attendees.</p>		
 	</section>
 
