--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -58,7 +58,7 @@
 		<h1>Mailing List</h1>
 		<div {% if subscribed %}class="already_subscribed"{% endif %}>			
 	        {% if subscribed %}
-	            <h2>You're subcribed!</h2>
+	            <h2>You're subscribed!</h2>
 	            <h3>We'll drop you a line whenever we have important news to share. Would you like to <a href="{% url clear %}">register another email</a>?</h3>
 	        {% else %}
 	        <h2>Our conference-news spam is made from 100% fresh pony.</h2>
