Adding anti-fontface-flicker JS for firefox.

--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -10,20 +10,20 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
 
 	{# Anti-flickering not necessary with typekit?  #}
-	{# <script type="text/javascript" charset="utf-8"> #}
-	{#         // http://paulirish.com/2009/fighting-the-font-face-fout/#defeatthefout #}
-	{#         (function(){ #}
-	{#           // if firefox 3.5+, hide content till load (or 3 seconds) to prevent FOUT #}
-	{#           var d = document, e = d.documentElement, s = d.createElement('style'); #}
-	{#           if (e.style.MozTransform === ''){ // gecko 1.9.1 inference #}
-	{#             s.textContent = 'body{visibility:hidden}'; #}
-	{#             e.firstChild.appendChild(s); #}
-	{#             function f(){ s.parentNode && s.parentNode.removeChild(s); } #}
-	{#             addEventListener('load',f,false); #}
-	{#             setTimeout(f,3000);  #}
-	{#           } #}
-	{#         })(); #}
-	{#     </script> #}
+	<script type="text/javascript" charset="utf-8">
+        // http://paulirish.com/2009/fighting-the-font-face-fout/#defeatthefout
+        (function(){
+          // if firefox 3.5+, hide content till load (or 3 seconds) to prevent FOUT
+          var d = document, e = d.documentElement, s = d.createElement('style');
+          if (e.style.MozTransform === ''){ // gecko 1.9.1 inference
+            s.textContent = 'body{visibility:hidden}';
+            e.firstChild.appendChild(s);
+            function f(){ s.parentNode && s.parentNode.removeChild(s); }
+            addEventListener('load',f,false);
+            setTimeout(f,3000); 
+          }
+        })();
+    </script>
 
 	<script type="text/javascript" src="http://use.typekit.com/zaa8yye.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
