--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -30,13 +30,14 @@
 	<section class="grid_6 home_split_info" id="elevator_statement">
 		<h1>About the Conference</h1>
 		<p>DjangoCon returns for its second year in Europe; the first as a wholly community-supported conference. Come join
-		us for a week of great talks on topics in Django and web development, hacking, and socializing in Berlin!</p>		
+		us in Berlin for a week of great talks on topics in Django and web development, with all the hacking, socializing and sprinting
+		you'd expect from the Django community!</p>		
 	</section>
 	<section class="grid_6 home_split_info" id="Sponsors">
 		<h1>Achtung Sponsors!</h1>
 		<p>DjangoCon draws several hundred smart Django hackers from across the globe&mdash;support the conference and gain a
 		place in their hearts and minds. We're open to both financial and "in-kind" sponsorships; <a href="mailto:sponsors@djangocon.eu">contact us today</a> and we'll
-		figure out a solution that gets your name noticed by our attendees.</p>		
+		figure out a solution that gets you name noticed by our attendees.</p>		
 	</section>
 
 <section id="tagline_section" class="container_12 clearfix">
