Fixing mistaken garbage paste in CSS.

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -381,7 +381,7 @@ p#register_now a:hover {
 
 #home_latest_blog>ul {
 	list-style: none;
-	margin: 0;#home_latest_blog
+	margin: 0;
 	padding: 0;
 	padding-top: 2px;
 }
