--- a/djangocon/templates/500.html
+++ b/djangocon/templates/500.html
@@ -1,17 +1,70 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>DjangoCon.eu 2010 - Berlin</title>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/500.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
-    </head>
+    
+<style type="text/css" media="screen">
+
+	html, body {
+		background-color: #586c78;
+		color: #fff;
+		font-family: "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+		height: 100%;
+		width: 100%;
+	}
+
+	.wrap_960 {
+		width: 960px;
+		margin: 0 auto;
+		padding: 0;
+		overflow: hidden;
+	}
+
+	h1 {
+		width: 960px;
+		height: 450px;
+		margin-top: 150px;
+		background-image: url({{ STATIC_URL }}img/500.png);
+		text-indent: -9999px;
+	}
+
+	h2 {
+		color: #ccc;
+		text-align: center;
+		font-weight: normal;
+		font-size: 22px;
+		margin: 10px 0;
+	}
+	
+	p {
+		color: #909ca2;
+		text-align: center;
+		font-weight: 300;
+		font-size: 18px;
+		margin: 10px 0;
+		
+	}
+	
+	a {
+		color: #fff;
+		text-decoration: none;
+	}
+	
+	a:hover {
+		text-decoration: underline;
+	}
+	
+	
+</style>
+
+</head>
 <body>
     <div class="wrap_960">
         <h1>Server Error: 500</h1>
         <h2>Now you have a dead pony on your conscience.</h2>
+		<p>You surely feel our pain. Please, <a href="mailto:contact@djangocon.eu" >drop us a line</a> and let us know where to look for the bug.</p>
     </div>
 </body>
 </html>
