--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -4,14 +4,14 @@
 
 {% block content %}
     <div class="container_12 clearfix">
-        <div class="grid_7 suffix_1">
-            <h3>Impressum</h3>
+        <section class="grid_7 suffix_1" id="legal">
+            <h1>Impressum</h1>
             
             <p>German law requires a <a href="http://en.wikipedia.org/wiki/Impressum#On_webpages" title="Impressum - Wikipedia, the free encyclopedia">statement of legal ownership</a> for documents, including websites.</p>
             
             <p>Die Website djangocon.eu wird vom Deutschen Django-Verein e. V. betrieben.</p>
 
-            <h4>Anschrift</h4>
+            <h2>Anschrift</h2>
             {% filter linebreaks %}Deutscher Django-Verein e. V.
             Erich-Zeigner-Allee 52
             04229 Leipzig
@@ -27,7 +27,7 @@
             Registernummer: VR 4814
             {% endfilter %}
 
-            <h3>Haftungshinweis</h3>
+            <h1>Haftungshinweis</h1>
             {% filter linebreaks %}Trotz sorgfältiger inhaltlicher Kontrolle übernimmt der Deutsche Django-Verein e. V. keine Haftung oder Garantie für die Aktualität, Richtigkeit und Vollständigkeit der Informationen auf dieser Website. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. Für die eingestellten Inhalte auf den Teilnehmerseiten sind die jeweiligen Teilnehmer selbst verantwortlich.
 
             Diese Website enthält Verweise auf Websites, die von Dritten eingerichtet wurden. Der Deutsche Django-Verein e. V. hat keinerlei Kontrolle über die Websites und die dort angebotenen Informationen, Waren oder Dienstleistungen. Der Deutsche Django-Verein e. V. übernimmt daher keinerlei Verantwortung, aus welchem Rechtsgrund auch immer, für den Inhalt der Websites Dritter.
@@ -36,9 +36,9 @@
 
             Für gegebenenfalls bestehende oder künftig entstehende Rechtsverhältnisse ist ausschließlich deutsches Recht anwendbar und sind nur deutsche Gerichte zuständig.
             {% endfilter %}
-        </div>
-        <div class="grid_4" id="colophon">
-            <h3>Colophon</h3>
+        </section>
+        <section class="grid_4" id="colophon">
+            <h1>Colophon</h1>
             
             <p>DjangoCon's site was built by the community, and has enjoyed the contributions of the following (non-exhaustive list of) people:</p>
             <ul>
@@ -48,8 +48,13 @@
                 <li>Philipp Bosch / <a href="http://twitter.com/philippbosch">@philippbosch</a></li>
                 {# <li>Jesper Nøhr / <a href="http://twitter.com/jespern">@jespern</a></li> #}
             </ul>
+			<p>Additionally, we'd like to provide attribution to the following projects:</p>
+			<ul>
+				<li><a href="http://glyphish.com/" title="Glyphish &ndash; Great icons for great iPhone &amp; iPad applications">Glyphish</a> for the lovely icons.</li>
+				<li><a href="http://gunicorn.org" title="Green Unicorn">gunicorn</a>, the WSGI server of champions.</li>
+			</ul>
             <p>You have three guesses as to which web development framework was used to build the site, and the first two don't count.</p>
-        </div>
+        </section>
     </div>
 
 {% endblock content %}
