--- a/static/css/local.css
+++ b/static/css/local.css
@@ -19,27 +19,35 @@ html, body {
 	font-size: 100%;
 }
 
-h3 {
-	font-weight: 300;
-	color: #157DBC;
+section h1 {
+	font-weight: 500;
+	font-size: 24px;
+	margin: 1em 0 0.3em;
 	text-shadow: #fff 0 1px 0;
-	font-size: 1.5em;
-	margin-bottom: 0.7em;
 }
 
-h4, legend {
-	font-weight: normal;
-	color: #5f99bc;
+section h2 {
+	font-weight: 500;
+	font-size: 20px;
+	margin: 1.5em 0 0.5em;
 	text-shadow: #fff 0 1px 0;
-	font-size: 1.25em;
-	margin-bottom: 0.7em;
+}
+
+section h3 {
+	font-weight: 300;
+	font-size: 16px;
+	letter-spacing: 2px;
+	color: #7ea1ad;
+	text-transform: uppercase;
+	text-shadow: #fff 0 1px 0;
+	margin: 1.5em 0 0.5em;
 }
 
 p {
 	color: #586c78;
 	font-size: 1em;
 	line-height: 1.5em;
-	margin-bottom: 1.0em;
+	margin: 0.6em 0;
 }
 
 ul {
@@ -113,7 +121,7 @@ a:hover {
 /* @group Primary Nav */
 
 nav#primarynav {
-	margin: 10px 0 30px 10px;
+	margin: 10px 0 15px 10px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #b2e3f5;
 }
@@ -360,7 +368,7 @@ p#register_now a:hover {
 	margin-bottom: 0.5em;
 	text-shadow: #fff 0 1px 0;
 	float:left;
-	margin-right: 1em;
+	margin-right: 0.2em;
 	padding-left: 34px;
 	padding-right: 15px;
 	background: url(../img/nav_blog.png) no-repeat 7px center;
@@ -370,7 +378,7 @@ p#register_now a:hover {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	padding-top: 2px;
+	padding-top: 1.6em;
 }
 
 #home_latest_blog>ul>li {
@@ -558,13 +566,14 @@ p.helptext {
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
 	text-shadow: #fff 0 1px 0;
-	margin-bottom: 10px;
+	margin: 0 0 10px 0;
 }
 
 #subscribe h2 {
 	font-weight: 300;
 	color: #7ea1ad;
 	font-size: 18px;
+	margin: 0 0 10px;
 	margin-bottom: 10px;
 }
 
@@ -572,10 +581,11 @@ p.helptext {
 	font-weight: 300;
 	color: #7ea1ad;
 	text-shadow: none;
-	/*text-shadow: #fff 0 1px 0;*/
+	text-transform: none;
 	font-size: 14px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	letter-spacing: normal;
 }
 
 #footer {
