Adding some talk guidelines.

--- a/djangocon/templates/talks/submit.html
+++ b/djangocon/templates/talks/submit.html
@@ -21,6 +21,36 @@
 {% block content %}
     <div class="container_12 clearfix">
         <div class="grid_7 suffix_1">
+			<section id="talk_guidelines">
+				<h1>Talk Submission Guidelines</h1>
+				<p>We've done our best to keep the administrativa to a minimum, please read the guidelines carefully before submitting a talk.</p>
+				<h2>Dates</h2>
+				<ul>
+					<li><strong>April 15<sup>th</sup></strong>: submission deadline</li>
+					<li><strong>April 22<sup>nd</sup></strong>: acceptance announcements</li>
+				</ul>
+				
+				<h2>Speaker Registration</h2>
+				<p>
+					DjangoCon Europe is a volunteer-run conference set in the heart of old-world socialsm; everybody pays
+					to attend (including speakers). Talk submission is not a substitute for purchasing a ticket. If you plan on
+					giving a talk, please make sure to purchase conference tickets and arrange transportation/lodging for yourself.
+				</p>
+				
+				<h2>Talks are Public</h2>
+				<p>
+					Talks will be recorded and published online following the conference; by submitting a talk, speakers implicitly
+					authorize the conference organizers to record, edit, and publish audio and video of their presentation.
+				</p>
+				
+				<h2>Format Guidelines</h2>
+				<p>
+					A standard talk is <strong>45 minutes in length</strong>, composed of <strong>30 minutes</strong> content and
+					<strong>15 minutes</strong> for audience question &amp; answer.
+				</p>
+			</section>
+			
+			
             <h3>Propose a talk</h3>
             {% if message %}
             <p>{{ message }}</p>
