Removing padding of email fieldset on homepage.

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -521,6 +521,10 @@ input:focus, textarea:focus {
 	background: #fff url(../img/input_bg_white.png) repeat-x left bottom;
 }
 
+#fieldset_email legend {
+	padding: 0;
+}
+
 #fieldset_email input {
 	font-size: 30px;
 	height: 40px;
